# rf-protocols

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
rf_protocols/: __init__.py  commands.py  honeywell_string_lights.py  loader.py  parser.py
rf_protocols/codes/harbor_breeze/a25/: __init__.py
rf_protocols/codes/honeywell/string_lights/: __init__.py  turn_off.sub  turn_on.sub
rf_protocols/codes/novy/cooker_hood/: __init__.py
rf_protocols/codes/novy/cooker_hood/channel_1/: plus.sub
rf_protocols/codes/novy/cooker_hood/channel_10/: plus.sub
rf_protocols/codes/novy/cooker_hood/channel_3/: light.sub
rf_protocols/codes/novy/cooker_hood/channel_4/: minus.sub
rf_protocols/codes/novy/cooker_hood/channel_5/: light.sub  minus.sub
rf_protocols/codes/novy/cooker_hood/channel_6/: ambient_light.sub  minus.sub
rf_protocols/codes/novy/cooker_hood/channel_7/: ambient_light.sub
rf_protocols/codes/novy/cooker_hood/channel_8/: minus.sub
rf_protocols/codes/novy/cooker_hood/channel_9/: minus.sub  plus.sub  power.sub
rf_protocols/codes/novy/cooker_hood/code_1/: light.sub  (+3 more)
rf_protocols/codes/somfy/rts/: __init__.py
rf_protocols/commands/: __init__.py  ev1527.py  falmec.py  kaku.py  marantec.py  novy.py  ook.py  pt2262.py  somfy_rts.py
script/: setup.sh
tests/: test_commands.py  test_honeywell_string_lights.py  test_loader.py  test_parser.py
tests/commands/: test_ev1527.py  test_falmec.py  test_kaku.py  test_marantec.py  test_novy.py  test_ook.py  test_pt2262.py  test_somfy_rts.py
(+33 files in other folders)
